src/test/ui/span/issue-24356.stderr
error[E0046]: not all trait items implemented, missing: `Target`
  --> $DIR/issue-24356.rs:30:9
   |
LL |         impl Deref for Thing {
   |         ^^^^^^^^^^^^^^^^^^^^ missing `Target` in implementation
   |
   = note: `Target` from trait: `type Target;`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0046"
